--- a/Portafolio-web/index.html
+++ b/Portafolio-web/index.html
@@ -4,57 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi super Portafolio</title>
+    <title>Mi Portafolio</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body class="body">
-    <div class="container">
-
-        <header class="header">
-            <section>
-                <nav class="navbar">
-                    <section class="logo">
-                        <h2><span>R</span>G</h2>
-                    </section>
-                    <ul class="menu-navbar">
+    <header class="header">
+        <section class="container">
+            <nav class="navbar d-flex flex-md-row flex-column align-items-center">
+                <section class="logo">
+                    <h2><span>R</span>G</h2>
+                </section>
+                <div class="list d-flex justify-content-center text-center">
+                    <ul class="menu-navbar d-flex flex-md-row flex-column align-items-center m-0 p-0">
                         <li><a href="#">About me</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
-                </nav>
-            </section>
-        </header>
+                </div>
+            </nav>
+        </section>
+    </header>
 
-        <main class="main-content">
+    <div class="container">
+        <main class="main-content d-flex flex-column flex-md-row mt-3">
             <section class="bio">
                 <h1>I'm Raúl Gallardo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga veniam adipisci animi, unde
-                    consequuntur a suscipit eligendi inventore sed est?</p>
+                <p>I am Raúl Gallardo, a passionate and dedicated student pursuing a degree in Computer Engineering. I
+                    have gained valuable experience through my involvement in various projects, where I have taken on
+                    roles such as Quality Assurance (QA) and Java Developer, utilizing the Spring framework to create
+                    robust solutions. While my current focus is on developing my skills as a Full-Stack Developer, I am
+                    also keen on deepening my expertise in Quality Assurance in the future. I am committed to continuous
+                    learning and to contributing to innovative projects that advance the field of technology.</p>
                 <a href="#" class="btn btn-outline-success">Download CV</a>
             </section>
-            <section class="img-container">
-                <img src="./assets/images/IMG-20240304-WA0087.jpg" alt="personal picture of Raúl Gallardo">
+            <section class="img-container pt-md-4 pt-3 d-flex justify-content-center">
+                <img src="./assets/images/IMG-20240304-WA0087.jpg" alt="personal picture of Raúl Gallardo"
+                    class="rounded">
             </section>
         </main>
 
-        <section class="projects-container m-5">
+        <section class="projects-container m-0">
             <section class="projects-header m-5">
                 <h2 class="text-center">My Projects</h2>
             </section>
-            <section class="projects-box ">
-                <div class="row grid gap-2 d-flex justify-content-center">
-                    <article class="card col-3 ">
+            <section class="projects-box">
+                <div
+                    class="projects-box__container row gap-2 d-flex flex-column flex-sm-row justify-content-center m-0 align-items-center">
+                    <article class="card col-md-3 col-9 project-card">
                         <section>
-                            <img class="card-img-top"
-                                src="https://sergiosanz.dev/static/b0ad08bfda05fba464bf2927db87772d/6df68/html-css.png"
+                            <img class="card-img-top card__img rounded"
+                                src="./assets/images/Captura de pantalla 2023-11-21 192719.png"
                                 alt="picture of the project">
                         </section>
                         <section class="card-body">
                             <section class="card-title">
-                                <h1>Hola Mundo</h1>
+                                <h1>Fortech</h1>
+                                <p>As QA</p>
+                            </section>
+                            <section class="card-links">
+                                <a href="https://github.com/nrecinos2001/finances-blog">Github</a>
+                                <a href="#">Demo</a>
+                            </section>
+                        </section>
+                    </article> <!-- card -->
+
+                    <article class="card col-md-3 col-9 project-card">
+                        <section>
+                            <img class="card-img-top card__img rounded"
+                                src="./assets/images/Screenshot 2024-08-27 211734.png" alt="picture of the project">
+                        </section>
+                        <section class="card-body">
+                            <section class="card-title">
+                                <h1>HLVS</h1>
+                                <p>As Backend</p>
                             </section>
                             <section class="card-links">
                                 <a href="#">Github</a>
@@ -63,36 +88,19 @@
                         </section>
                     </article> <!-- card -->
 
-                    <article class="card col-3">
+                    <article class="card col-md-3 col-9 project-card">
                         <section>
-                            <img class="card-img-top"
-                                src="https://sergiosanz.dev/static/b0ad08bfda05fba464bf2927db87772d/6df68/html-css.png"
-                                alt="picture of the project">
+                            <img class="card-img-top card__img rounded"
+                                src="./assets/images/Screenshot 2024-08-27 211931.png" alt="picture of the project">
                         </section>
                         <section class="card-body">
                             <section class="card-title">
-                                <h1>Hola Mundo</h1>
+                                <h1>Cofe blog</h1>
+                                <p>As Frontend</p>
                             </section>
                             <section class="card-links">
-                                <a href="#">Github</a>
-                                <a href="#">Demo</a>
-                            </section>
-                        </section>
-                    </article> <!-- card -->
-
-                    <article class="card col-3">
-                        <section>
-                            <img class="card-img-top"
-                                src="https://sergiosanz.dev/static/b0ad08bfda05fba464bf2927db87772d/6df68/html-css.png"
-                                alt="picture of the project">
-                        </section>
-                        <section class="card-body">
-                            <section class="card-title">
-                                <h1>Hola Mundo</h1>
-                            </section>
-                            <section class="card-links">
-                                <a href="#">Github</a>
-                                <a href="#">Demo</a>
+                                <a href="https://github.com/Rals14/Coffee-blog">Github</a>
+                                <a href="https://blogdecafe-ralsdev.netlify.app/">Demo</a>
                             </section>
                         </section>
                     </article> <!-- card -->
@@ -104,14 +112,14 @@
     </div>
 
 
-    <section class="contact-form d-flex justify-content-center m-5">
-        <form action="#" class="card col-6 bg-light">
+    <section class="contact-form d-flex justify-content-center m-4">
+        <form action="#" class="card col-9 bg-light">
 
             <section class="form-floating m-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="Jhon Doe">
                 <label for="floatingInput" class="text-black">Name</label>
             </section>
-            
+
             <section class="form-floating m-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput" class="text-black">Email address</label>
@@ -122,21 +130,20 @@
                 <label for="floatingTextarea" class="text-black">Comments</label>
             </section>
 
-            <a href="#" class="btn btn-primary m-3">Send</a>
+            <a href="#" class="btn btn-primary m-3 bg-white text-dark border-dark">Send</a>
         </form>
 
     </section>
 
 
     <footer class="footer-section">
-        <section class="footer-content">
-            <h2 class="text-center">Raúl Gallardo Copyright since 2024</h2>
-            <h5 class="text-center">Frontend Developer</h5>
+        <section class="footer-content d-flex flex-column align-items-center">
+            <h2 class="text-center m-0">Raúl Gallardo Copyright since 2024</h2>
+            <h5 class="text-center">Developer</h5>
         </section>
-        <section class="social-networks d-flex justify-content-center">
-            <a href="#">LinkedIn</a>
-            <a href="#">Github</a>
-            <a href="#"></a>
+        <section class="social-networks d-flex justify-content-center gap-3">
+            <a href="https://www.linkedin.com/in/rgallardodev/">LinkedIn</a>
+            <a href="https://github.com/Rals14">Github</a>
         </section>
     </footer>
 
