--- a/Tareas/Landing page/product.html
+++ b/Tareas/Landing page/product.html
@@ -286,7 +286,7 @@
             <section class="discount-section">
                 <div class="discount-section-container">
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/5379550-1600-auto?v=638482917158430000&width=1600&height=auto&aspect=true"
                                 alt="Celular Samsung A15">
@@ -310,7 +310,7 @@
                         </div>
                     </a>
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/5871897-1600-auto?v=638544266089270000&width=1600&height=auto&aspect=true"
                                 alt="Tablet Samsung S9 FE">
@@ -336,7 +336,7 @@
                         </div>
                     </a>
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/5980838-1600-auto?v=638575094671830000&width=1600&height=auto&aspect=true"
                                 alt="Smartwatch Samsung Galaxy watch FE">
@@ -359,7 +359,7 @@
                         </div>
                     </a>
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/4883862-1600-auto?v=638344663595430000&width=1600&height=auto&aspect=true"
                                 alt="Audífono Galaxy buds FE">
@@ -381,7 +381,7 @@
                         </div>
                     </a>
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/6026561-1600-auto?v=638592427716430000&width=1600&height=auto&aspect=true"
                                 alt="Pantalla Samsung Crystal">
@@ -406,7 +406,7 @@
                         </div>
                     </a>
                     <!--product container-->
-                    <a href="/product.html">
+                    <a href="./product.html">
                         <div class="product-container">
                             <img src="https://siman.vtexassets.com/arquivos/ids/5481830-1600-auto?v=638503501407800000&width=1600&height=auto&aspect=true"
                                 alt="Pantalla Samsung Crystal">
